# RaceBoardServer

./: .gitignore  .gitlab_adapter_state.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_GITLAB_ADAPTER.md  build.rs  check_sled.sh  cleanup_locks.sh  config.toml  gitlab_config.toml  gitlab_config.toml.example  rcmd  setup_raceboard.sh  setup_zsh_aliases.sh  squash_to_initial.sh  start_server.sh  test_grpc.py
.claude/: settings.local.json
UI_Resources/: ADAPTER_REFACTORING_SUMMARY.md  README.md  manifest.json
api/: openapi.yaml
claude-hooks/: install.sh  progress-updater.sh  prompt-submit-advanced.sh  prompt-submit.sh  response-received.sh  unified-hook.sh
codex-hooks/: codex-aliases.sh  codex-session-monitor.sh  codex-session.py  codex-wrapper-session.sh  codex-wrapper-simple.sh  codex-wrapper.sh  install.sh
docs/: ADAPTER_DEVELOPMENT_GUIDE.md  ADAPTER_IMPROVEMENT_PROPOSAL.md  ADAPTER_LIBRARY_PROPOSAL.md  CMD_RUNNER_IMPLEMENTATION.md  CODEX_PROGRESS_TRACKING.md  CONFIGURATION.md  DATA_RECOVERY_PLAN.md  DAY_1_UI_AND_BUGFIXING.md  DAY_2_INSTALLATION_AND_CLUSTER_SHARING.md  DAY_3_DOCUMENTATION_AND_RELEASE_PREP.md  DUAL_RAIL_USAGE_VERIFICATION.md  ETA_PREDICTION_SYSTEM.md  FULL_HISTORICAL_SYNC_PROPOSAL.md  GITLAB_ADAPTER_PROPOSAL.md  GOOGLE_CALENDAR_ADAPTER.md  HEALTH_CHECK_REFACTORING_PROPOSAL.md  HEALTH_CHECK_SPECIFICATION_V2.md  HEALTH_CHECK_UNIFIED_API.md  IMPLEMENTATION_STATUS.md  INDEX.md  OPTIMISTIC_PROGRESS_SUPPORT.md  OPTIMISTIC_PROGRESS_VALIDATION.md  README.md  RICHER_METADATA_PROPOSAL.md  SECURITY.md  SERVER_GUIDE.md  SERVER_IMPLEMENTATION.md  UI_IMPLEMENTATION_VALIDATION.md
grpc/: race.proto
src/: adapter_common.rs  adapter_ids.rs  adapter_status.rs  app_state.rs  cluster.rs  config.rs  grpc_service.rs  grpc_status.rs  handlers.rs  hnsw_dbscan.rs  lib.rs  main.rs  models.rs  monitoring.rs  persistence.rs  phased_rollout.rs  rebuild.rs  (+6 more)
(+44 files in other folders)
